# moltbook_scraper

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
analysis/: .gitignore
analysis/R/: 01_load_data.R  02_structural.R  03_conversation.R  04_lexical.R  05_topics.R  06_network_deep.R  07_owner_analysis.R  utils.R
analysis/paper/: working_paper.Rmd
docs/plans/: 2026-01-30-moltbook-scraper-design.md
latex/: moltbook_analysis.bib  moltbook_analysis.tex
scripts/: daily_scrape.sh
src/: __main__.py  cli.py  client.py  database.py  scraper.py
tests/: test_client.py  test_database.py  test_scraper.py
